<resources>
    <string name="app_name">DiaCare</string>
    <string name="usernameTxt">Username</string>
    <string name="passwordTxt">Password</string>
    <string name="loginTxt">Login</string>
    <string name="glucoseRes">Glucose Result</string>
    <string name="addBtnTxt">ADD</string>
    <string name="recordTitle">Record</string>
    <string name="historyTitle">History</string>
    <string name="settingTitle">Settings</string>
    <string name="registTxt">Register Here</string>



</resources>