<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_margin="50dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"
        />

    <EditText
        android:id="@+id/userid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="150dp"
        android:hint="@string/usernameTxt"
        android:textSize="18sp"
        android:textStyle="italic"
        />

    <EditText
        android:id="@+id/passid"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="225dp"
        android:hint="@string/passwordTxt"
        android:textSize="18sp"
        android:textStyle="italic"

        />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerInParent="true"
        android:layout_marginHorizontal="50dp"
        android:backgroundTint="@color/yellow"
        android:text="@string/loginTxt"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <Button
        android:id="@+id/registBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registTxt"
        android:textColor="@color/grey"
        android:textStyle="bold"
        android:layout_below="@id/loginBtn"
        android:backgroundTint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

</RelativeLayout>